Fix UI alignment issues on Logs and Dumps pages
Resolve multiple UI inconsistencies across the Logs and Dumps
pages by correcting alignment issues in the filter popup and
improving layout for dump type options. Enhance visual clarity
with a corrected search icon, and a properly aligned
page number display.

These changes improve overall usability and maintain design
consistency across the application.

--- a/src/assets/styles/bmc/custom/_pagination.scss
+++ b/src/assets/styles/bmc/custom/_pagination.scss
@@ -11,9 +11,10 @@
   }
 }
 
-.b-pagination {
+.pagination {
   @include media-breakpoint-up(sm) {
-    justify-content: flex-end;
+    /* !important is used to override the default bootstrap v5.3.8 styles */
+    justify-content: flex-end !important;
   }
   .page-item.active button {
     color: theme-color("dark");
